# csd_observer

./: .gitignore  README.md  pyproject.toml
configs/data/: chick_heart.yaml  default.yaml
configs/model/: chick_heart.yaml  default.yaml
configs/run/: chick_heart.yaml  default.yaml  high_noise.yaml  low_data.yaml  patients_100.yaml  patients_200.yaml  patients_300.yaml  patients_400.yaml
configs/training/: chick_heart.yaml  default.yaml
docs/: aa.md  benchmark_report.md  finalized_plan.md  ll.md  ll2.md  ll3.md  ll4.md  ll5.md
docs/definition/: formal_definination.md
docs/notes/: plan.md
docs/reference/logs/: 1.md  2.md  3.md
docs/reference/src/: bifurcation.py  csd_loss.py  csd_observer.py  test_csd_synthetic_benchmark.py
src/csd_observer/: __main__.py
src/csd_observer/config/: load.py
src/csd_observer/data/: __init__.py  bifurcation.py
src/csd_observer/data/chick_heart/: __init__.py  _config.yaml  download.py  load.py  prepare.py  transition.py
src/csd_observer/models/: csd_observer.py  kalman_lag2.py
src/csd_observer/training/: trainer.py
src/csd_observer/utils/: io.py  losses.py  metrics.py
studies/runner/: ablation.py  benchmark.py  debug_aug.py  debug_nulltrain.py  debug_threshold.py
tests/: test_observer.py
