[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csd_observer"
version = "0.1.0"
description = "Adaptive Critical-Slowing-Down Observer with Physics-Informed LSTM Head"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
csd-observer = "csd_observer.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/csd_observer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
